# Server/Api/Controllers/M2CMqttController.cs
@@ -48,16 +48,70 @@ public class M2CMqttController(ILogger<M2CMqttController> logger, MyDbContext co
         
     }
     
-    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/command")]
+    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/command/set-interval")]
     public async Task SetInterval(string turbineId, int interval)
     {
-        var command = new Commands()
-        {
-            action = "setInterval",
-            value = interval
-        };
+        var command = Command.SetInterval(interval);
         await mqtt.PublishAsync($"farm/Mindst2Commits/windmill/{turbineId}/command", 
             JsonSerializer.Serialize(command));
     }
+    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/command/stop")]
+    public async Task StopTurbine(string turbineId, [FromQuery] string? reason = null)
+    {
+        var command = Command.Stop(reason);
+        await mqtt.PublishAsync($"farm/Mindst2Commits/windmill/{turbineId}/command", 
+            JsonSerializer.Serialize(command));
+    }
+    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/command/start")]
+    public async Task StartTurbine(string turbineId)
+    {
+        var command = Command.Start();
+        await mqtt.PublishAsync($"farm/Mindst2Commits/windmill/{turbineId}/command", 
+            JsonSerializer.Serialize(command));
+    }
+    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/command/blade-pitch")]
+    public async Task SetBladePitch(string turbineId, int bladePitch)
+    {
+        var command = Command.SetPitch(bladePitch);
+        await mqtt.PublishAsync($"farm/Mindst2Commits/windmill/{turbineId}/command", 
+            JsonSerializer.Serialize(command));
+    }
+    
+    
+    
+    [HttpPost("farm/Mindst2Commits/windmill/{turbineId}/alert")]
+    public async Task<IActionResult> PublishAlert(string turbineId, [FromBody] Alert alert)
+    {
+        alert.Turbineid = turbineId;
+
+        await mqtt.PublishAsync(
+            $"farm/Mindst2Commits/windmill/{turbineId}/alert",
+            JsonSerializer.Serialize(alert));
+
+        return new OkObjectResult(new
+        {
+            message = "Alert published to MQTT",
+            turbineId
+        });
+    }
+    
+    [MqttRoute("farm/Mindst2Commits/windmill/{turbineId}/alert")]
+    public async Task SubscribeToWindmillAlerts(Alert data, string turbineId)
+    {
+        logger.LogInformation($"Data from turbine: {turbineId}");   
+
+        logger.LogInformation($"Timestamp: {data.Timestamp}");
+        logger.LogInformation($"Severity: {data.Severity}");
+        logger.LogInformation($"Message: {data.Message}");
+    
+        data.Id = Guid.NewGuid().ToString();
+    
+        context.Alerts.Add(data);
+        await context.SaveChangesAsync();
+
+        await backplane.Clients.SendToGroupAsync(data.Turbineid,data);
+    }
+    
+    
     
 }
